KubernetesObjects/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nameofmirror
  namespace: namespace
spec:
  selector:
    matchLabels:
      app: nameofmirror
  replicas: 1
  template:
    metadata:
      labels:
        app: nameofmirror
    spec:
      volumes:
        - name: repoVolume
          persistentVolumeClaim:
            claimName: claimname
        - name: incomingData
          persistentVolumeClaim:
            claimName: claimname
      containers:
        - name: nameofmirror
          image: image
          resources:
            limits:
              memory: 1Gi
              cpu: "500m"
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - mountPath: /repository
              name: repoVolume
            - mountPath: /incoming
              name: incomingData
        - name: nameofmirror-server
          image: nginx
          resources:
            limits:
              memory: 1Gi
              cpu: "500m"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /repository
              name: repoVolume
      imagePullSecrets:
        - name: imagepullsecret
