KubernetesObjects/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nameofmirror
  namespace: namespace
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nameofmirror
