KubernetesObjects/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nameofrepo
  namespace: namespacetemplate
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: "hostlink"
    http:
      paths:
      - path: "repopath"
        pathType: Prefix
        backend:
          service:
            name: nameofrepo
            port:
              number: 80
